--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -734,3 +734,29 @@ body
 h2.text-center.electronics:hover {
   color:#dddddd;
 }
+
+.custom-pagination {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.custom-pagination li {
+  background: #FFF;
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.07);
+  padding: 7px 12px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  cursor: pointer;
+}
+
+.custom-pagination li.page_active{
+  background: #437ECE;
+  color: #fff;
+}
+
+.custom-pagination li.page_last{
+  color: #437ECE;
+}
