--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -261,7 +261,7 @@ footer .search-icon {
     padding: 10px;
     border: 1px solid rgba(82, 82, 108, 0.1);
     border-radius: 0 0 5px 5px;
-    z-index: 9999;
+    z-index: 1000;
     max-height: 350px;
     overflow-y: auto;
 }
@@ -373,7 +373,7 @@ footer .search-icon {
     border-radius: 5px;
     padding: 2px;
     text-align: center;
-    min-height: 210px;
+    min-height: 235px;
 }
 
 .product-card:hover {
@@ -399,6 +399,10 @@ footer .search-icon {
     display: flex;
     align-items: center;
     justify-content: center;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
 }
 
 .product-slider {
@@ -578,7 +582,7 @@ footer .search-icon {
     background: #F4F7FB;
     border-radius: 5px;
     text-align: center;
-    padding: 10px 30px;
+    padding: 10px 10px;
     margin: 25px 0 0;
     min-height: 90px;
     display: flex;
@@ -621,6 +625,7 @@ footer .search-icon {
     justify-content: center;
     font-weight: 500;
     font-size: 15px;
+    min-width: 32px;
 }
 
 .comparisons-slider {
