--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -698,13 +698,13 @@ body
   padding: 5px;
 }
 
-.about-card-section{
+.about-card-section {
   float: none !important;
   margin: 20px 0;
   width: auto !important;
 }
 
-.about-card-section img{
+.about-card-section img {
   margin: 20px auto !important;
   display: block;
 }
@@ -742,7 +742,7 @@ body
 }
 
 .custom-pagination li {
-  background: #FFF;
+  background: #fff;
   box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.07);
   padding: 7px 12px;
   font-size: 16px;
@@ -752,11 +752,11 @@ body
   cursor: pointer;
 }
 
-.custom-pagination li.page_active{
-  background: #437ECE;
+.custom-pagination li.page_active {
+  background: #437ece;
   color: #fff;
 }
 
-.custom-pagination li.page_last{
-  color: #437ECE;
+.custom-pagination li.page_last {
+  color: #437ece;
 }
