--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -395,10 +395,13 @@ footer .search-icon {
     font-family: 'Lato', sans-serif !important;
     font-weight: 400 !important;
     line-height: 1.4;
-    min-height: 45px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.product-card span a{
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;  
