--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -206,9 +206,10 @@ footer .search-icon {
     border: 1px solid rgba(82, 82, 108, 0.1);
     border-radius: 5px;
     background: var(--white-color);
-    max-width: 600px;
+    max-width: 991px;
     margin: auto;
     padding: 2px;
+    gap: 30px;
 }
 
 .hero-searchbar .search-icon {
