--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -463,7 +463,12 @@ footer .search-icon {
     color: var(--nav-link);
     background: #FFFFFF;
     padding: 14px 24px;
-    border: 1px solid rgba(82, 82, 108, 0.1);
+    border: 1px solid rgba(82, 82, 108, 0.1) !important;
+}
+
+.compare-section input:focus, .compare-section input:focus-visible{
+    outline: none !important;
+    box-shadow: none !important;
 }
 
 .sponsor-image-container {
