--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -797,3 +797,144 @@ body
 button.searchBarInner.btn.btn-primary {
   cursor: auto;
 }
+
+/* Bottom-bar-start */
+
+.bottom_bar{
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+  width: fit-content;
+  z-index: 10000;
+}
+
+.bottom_bar_header_content {
+  border-radius: 15px 15px 0px 15px;
+  background: #437ECE;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  padding: 5px 15px;
+  gap: 10px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  cursor: pointer;
+
+}
+
+.bottom_bar_header_content i.ri-arrow-up-s-line {
+  font-size: 35px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.bottom_bar_heading {
+  display: flex;
+  gap: 10px;
+}
+
+.bottom_bar_heading > div {
+  color: #FFF;
+  font-size: 17px;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.bottom_bar_heading span {
+  background: var(--primary-color);
+  width: 28px;
+  height: 28px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.bottom_bar_body {
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  background: #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 8px;
+  width: 238px;
+  max-width: 95%;
+  margin-left: auto;
+}
+
+.bottom_bar_compare_list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.bottom_bar_compare_list li{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: 1px solid #d4d6dc;
+  padding: 4px 0;
+}
+
+.bottom_bar_compare_list li img{
+  width: 38px;
+  height: 38px;
+  object-fit: contain;
+  object-position: center;
+}
+
+.bottom_bar_compare_list li p{
+  flex: 1;
+  color: rgba(39, 48, 78, 0.80);
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.bottom_bar_compare_list li i {
+  font-size: 25px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottom_bar_compare_list_footer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 8px 0;
+}
+
+.bottom_bar_compare_list_footer span {
+  width: 32px;
+  height: 32px;
+  background: #437ECE;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 22px;
+}
+
+.bottom_bar_compare_list_footer button {
+  border-radius: 5px;
+  background: rgba(39, 48, 78, 0.90);
+  border: none;
+  flex: 1;
+}
+
+.bottom_bar_compare_list_footer button:hover{
+  background: rgba(39, 48, 78, 0.90);
+} 
+
+/* Bottom-bar-end */
